# psychonaut_wiki_api

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  query.rs  substance.rs  types.rs
src/graphql/: wiki_api.graphql
src/http/: request.rs
